Move matchers to Shakedown.
Summary:
Let's move the matchers from the Marathon system tests to Shakedown so
that others can profit.

JIRA issues: MARATHON-8388

--- a/tests/shakedown/Pipfile
+++ b/tests/shakedown/Pipfile
@@ -1,23 +1,17 @@
 [[source]]
-
 name = "pypi"
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 
-
 [requires]
-
 python_version = "3.6"
 
-
 [dev-packages]
-
 "flake8" = "*"
 "pep8-naming" = "*"
 
-
 [packages]
-
 click = "*"
 retrying = "*"
 toml = "*"
+precisely = "*"
